browser-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browser-ui
  namespace: default
spec:
  selector:
    app: browser-ui
  ports:
    - name: http
      port: 80
      targetPort: 5800
  type: ClusterIP
