browser-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-browser
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: browser-basic-auth
spec:
  ingressClassName: nginx
  rules:
    - host: browser.sanjaylabs.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-browser
                port:
                  number: 80
